# demo-lms

./: .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml
.cursor/: settings.json
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  auth.py  batches.py  bookings.py  chat.py  courses.py  events.py  faqs.py  jobs.py  lessons.py  notifications.py  resources.py  router.py  tasks.py  tickets.py  uploads.py  users.py
backend/app/core/: config.py  exceptions.py  security.py
backend/app/db/: __init__.py  bootstrap.py  session.py
backend/app/models/: __init__.py  batch.py  booking.py  course.py  enums.py  event.py  faq.py  job.py  job_update.py  notification.py  resource.py  task.py  ticket.py  user.py
backend/app/schemas/: admin.py  auth.py  batch.py  booking.py  common.py  course.py  event.py  faq.py  job.py  job_update.py  notification.py  resource.py  task.py  ticket.py  user.py
backend/app/services/: __init__.py  auth.py
backend/app/utils/: youtube.py
backend/scripts/: init_db.py  migrate_add_is_free.py  seed_free_courses.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/courses/: page.tsx
src/app/dashboard/: layout.tsx
src/app/login/: login-form.tsx  page.tsx
src/app/signup/: page.tsx
src/components/admin/: admin-shell.tsx  (+12 more)
src/contexts/: auth-context.tsx
src/lib/: admin-nav.ts  api.ts  appointments-data.ts  course-detail.ts  course-from-api.ts  dashboard-nav.ts  doubts-data.ts  home-data.ts  jobs-data.ts  tasks-data.ts
(+74 files in other folders)
